@@ -1,4 +1,4 @@
-/*	$NetBSD: job.c,v 1.135 2008/01/19 06:52:14 sjg Exp $	*/
+/*	$NetBSD: job.c,v 1.139 2008/02/15 21:29:50 christos Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990 The Regents of the University of California.
@@ -70,14 +70,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: job.c,v 1.135 2008/01/19 06:52:14 sjg Exp $";
+static char rcsid[] = "$NetBSD: job.c,v 1.139 2008/02/15 21:29:50 christos Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)job.c	8.2 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: job.c,v 1.135 2008/01/19 06:52:14 sjg Exp $");
+__RCSID("$NetBSD: job.c,v 1.139 2008/02/15 21:29:50 christos Exp $");
 #endif
 #endif /* not lint */
 #endif
