@@ -1,4 +1,4 @@
-/*	$NetBSD: lstInt.h,v 1.13 2006/10/27 21:37:25 dsl Exp $	*/
+/*	$NetBSD: lstInt.h,v 1.15 2008/02/05 16:39:26 joerg Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -47,7 +47,7 @@
 typedef struct ListNode {
 	struct ListNode	*prevPtr;   /* previous element in list */
 	struct ListNode	*nextPtr;   /* next in list */
-	short	    	useCount:8, /* Count of functions using the node.
+	unsigned int	useCount:8, /* Count of functions using the node.
 				     * node may not be deleted until count
 				     * goes to 0 */
  	    	    	flags:8;    /* Node status flags */
