@@ -1,4 +1,4 @@
-/*	$NetBSD: make.c,v 1.74 2007/01/01 21:42:42 dsl Exp $	*/
+/*	$NetBSD: make.c,v 1.76 2008/02/15 21:29:50 christos Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,14 +69,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: make.c,v 1.74 2007/01/01 21:42:42 dsl Exp $";
+static char rcsid[] = "$NetBSD: make.c,v 1.76 2008/02/15 21:29:50 christos Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)make.c	8.1 (Berkeley) 6/6/93";
 #else
-__RCSID("$NetBSD: make.c,v 1.74 2007/01/01 21:42:42 dsl Exp $");
+__RCSID("$NetBSD: make.c,v 1.76 2008/02/15 21:29:50 christos Exp $");
 #endif
 #endif /* not lint */
 #endif
