@@ -73,11 +73,19 @@
 #endif
 
 #if defined(__cplusplus)
-#define	__BEGIN_DECLS	extern "C" {
-#define	__END_DECLS	};
+#  ifndef __BEGIN_DECLS
+#  define __BEGIN_DECLS	extern "C" {
+#  endif
+#  ifndef __END_DECLS
+#  define __END_DECLS	};
+#  endif
 #else
-#define	__BEGIN_DECLS
-#define	__END_DECLS
+#  ifndef __BEGIN_DECLS
+#  define __BEGIN_DECLS
+#  endif
+#  ifndef __END_DECLS
+#  define __END_DECLS
+#  endif
 #endif
 
 /*
@@ -89,7 +97,9 @@
  */
 #if defined(__STDC__) || defined(__cplusplus)
 #define	__P(protos)	protos		/* full-blown ANSI C */
+#ifndef __CONCAT
 #define	__CONCAT(x,y)	x ## y
+#endif
 #define	__STRING(x)	#x
 
 #define	__const		const		/* define reserved names to standard */
