@@ -1,4 +1,4 @@
-/*	$NetBSD: parse.c,v 1.143 2008/01/03 22:14:53 dsl Exp $	*/
+/*	$NetBSD: parse.c,v 1.145 2008/02/15 21:29:50 christos Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,14 +69,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: parse.c,v 1.143 2008/01/03 22:14:53 dsl Exp $";
+static char rcsid[] = "$NetBSD: parse.c,v 1.145 2008/02/15 21:29:50 christos Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)parse.c	8.3 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: parse.c,v 1.143 2008/01/03 22:14:53 dsl Exp $");
+__RCSID("$NetBSD: parse.c,v 1.145 2008/02/15 21:29:50 christos Exp $");
 #endif
 #endif /* not lint */
 #endif
