@@ -1,4 +1,4 @@
-/*	$NetBSD: targ.c,v 1.50 2007/12/21 20:32:24 dsl Exp $	*/
+/*	$NetBSD: targ.c,v 1.52 2008/02/15 21:29:50 christos Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,14 +69,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: targ.c,v 1.50 2007/12/21 20:32:24 dsl Exp $";
+static char rcsid[] = "$NetBSD: targ.c,v 1.52 2008/02/15 21:29:50 christos Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)targ.c	8.2 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: targ.c,v 1.50 2007/12/21 20:32:24 dsl Exp $");
+__RCSID("$NetBSD: targ.c,v 1.52 2008/02/15 21:29:50 christos Exp $");
 #endif
 #endif /* not lint */
 #endif
