@@ -1,4 +1,4 @@
-/*	$NetBSD: var.c,v 1.123 2007/10/13 19:59:52 apb Exp $	*/
+/*	$NetBSD: var.c,v 1.127 2008/02/15 21:29:50 christos Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,14 +69,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: var.c,v 1.123 2007/10/13 19:59:52 apb Exp $";
+static char rcsid[] = "$NetBSD: var.c,v 1.127 2008/02/15 21:29:50 christos Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)var.c	8.3 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: var.c,v 1.123 2007/10/13 19:59:52 apb Exp $");
+__RCSID("$NetBSD: var.c,v 1.127 2008/02/15 21:29:50 christos Exp $");
 #endif
 #endif /* not lint */
 #endif
